--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             border: 2px solid #f1bb17;
             border-radius: 25px;
             background-color: transparent;
-            color: #000;
+            color: #fff;
         }
 
         form input::placeholder {
