--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             justify-content: space-between;
             align-items: center;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            position: sticky;
+            top:0;
         }
 
         .logo {
